Fix spacing on contact page

--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column nowrap;
 }
+
 .contact-header {
   display: flex;
   flex-flow: column nowrap;
@@ -10,7 +11,6 @@
 
   margin-right: 1rem;
   margin-left: 1rem;
-  height: 15rem;
   width: 100%;
   text-align: center;
 }
